[package]
name = "riji"
description = "Scripting environment using rhai"
version = "0.1.6"
authors = ["Sören Meier <info@s-me.ch>"]
repository = "https://github.com/fire-lib/riji"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
lto = true

[dependencies]
rhai = { version = "1.6.1", features = ["no_float", "only_i64", "no_closure", "internals", "metadata"] }
git2 = "0.14.4"
regex = "1.5.4"
uuid = { version = "0.8", features = ["v4"] }
dunce = "1.0"
toml = "0.5"

# panting
ansi_term = "0.12.1"
ctor = "0.1.9"
output_vt100 = "0.1.2"